--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
  font-family: 'Intrepid';
   src: url('/font/Intrepid Regular.ttf') format('truetype');
- font-family: 'RoundedMplus';
+ font-family: 'Rounded-L M+ 1c';
   src: url('/font/rounded-l-mplus-1c-light.ttf') format('truetype');
 }
 
 body {
-  font-family: RoundedMplus, Intrepid;
+  font-family: Intrepid, "Rounded-L M+ 1c";
   text-align: center;
 }
