--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
- font-family: 'Intrepid';
-  src: url('font/Intrepid Regular.ttf') format('truetype');
+ font-family: 'futura';
+  src: url('font/futura.ttf') format('truetype');
 }
 @font-face {
  font-family: 'Rounded-L M+ 1c';
@@ -8,6 +8,6 @@
 }
 
 body {
-  font-family: Intrepid, "Rounded-L M+ 1c";
+  font-family: futura, "Rounded-L M+ 1c";
   text-align: center;
 }
