--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
  font-family: 'futura';
-  src: url('font/futura.ttf') format('truetype');
+  src: url('font/futura-regular.ttf') format('truetype');
 }
 @font-face {
  font-family: 'Rounded-L M+ 1c';
