--- a/live/style.css
+++ b/live/style.css
@@ -19,4 +19,13 @@ a {
   color: #000;
   border-radius: 2px;
   padding: 5px;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: blue;
+  color: #fff;
+  border-radius: 2px;
+  padding: 5px;
+  text-decoration: none;
 }
